experiments/cc/478997921b395d310f1ff4827eea525b7cb529/error
MESSAGE: Execution of "sudo -u lctt-runner ./build_llvm_project_stage1.sh" failed

STDOUT:
[356/2644] Copying clang's lsxintrin.h...
[357/2644] Copying clang's lzcntintrin.h...
[358/2644] Copying clang's mm_malloc.h...
[359/2644] Copying clang's mmintrin.h...
[360/2644] Copying clang's movdirintrin.h...
[361/2644] Copying clang's msa.h...
[362/2644] Copying clang's mwaitxintrin.h...
[363/2644] Copying clang's nmmintrin.h...
[364/2644] Copying clang's openmp_wrappers/math.h...
[365/2644] Copying clang's pconfigintrin.h...
[366/2644] Copying clang's opencl-c.h...
[367/2644] Copying clang's pkuintrin.h...
[368/2644] Copying clang's pmmintrin.h...
[369/2644] Copying clang's ppc_wrappers/bmiintrin.h...
[370/2644] Copying clang's popcntintrin.h...
[371/2644] Copying clang's ppc_wrappers/bmi2intrin.h...
[372/2644] Copying clang's ppc_wrappers/immintrin.h...
[373/2644] Copying clang's ppc_wrappers/emmintrin.h...
[374/2644] Copying clang's ppc_wrappers/nmmintrin.h...
[375/2644] Copying clang's ppc_wrappers/mm_malloc.h...
[376/2644] Copying clang's ppc_wrappers/mmintrin.h...
[377/2644] Copying clang's ppc_wrappers/pmmintrin.h...
[378/2644] Copying clang's ppc_wrappers/smmintrin.h...
[379/2644] Copying clang's ppc_wrappers/tmmintrin.h...
[380/2644] Copying clang's ppc_wrappers/x86gprintrin.h...
[381/2644] Copying clang's ppc_wrappers/x86intrin.h...
[382/2644] Copying clang's prfchiintrin.h...
[383/2644] Copying clang's ppc_wrappers/xmmintrin.h...
[384/2644] Copying clang's prfchwintrin.h...
[385/2644] Copying clang's rdpruintrin.h...
[386/2644] Copying clang's raointintrin.h...
[387/2644] Copying clang's rdseedintrin.h...
[388/2644] Copying clang's riscv_ntlh.h...
[389/2644] Copying clang's rtmintrin.h...
[390/2644] Copying clang's ptwriteintrin.h...
[391/2644] Copying clang's serializeintrin.h...
[392/2644] Copying clang's s390intrin.h...
[393/2644] Copying clang's sgxintrin.h...
[394/2644] Copying clang's sha512intrin.h...
[395/2644] Copying clang's sifive_vector.h...
[396/2644] Copying clang's shaintrin.h...
[397/2644] Copying clang's sm3intrin.h...
[398/2644] Copying clang's sm4intrin.h...
[399/2644] Copying clang's smmintrin.h...
[400/2644] Copying clang's tbmintrin.h...
[401/2644] Copying clang's tsxldtrkintrin.h...
[402/2644] Copying clang's uintrintrin.h...
[403/2644] Copying clang's usermsrintrin.h...
[404/2644] Copying clang's vaesintrin.h...
[405/2644] Copying clang's tmmintrin.h...
[406/2644] Copying clang's vecintrin.h...
[407/2644] Copying clang's velintrin_approx.h...
[408/2644] Copying clang's velintrin.h...
[409/2644] Copying clang's velintrin_gen.h...
[410/2644] Copying clang's vpclmulqdqintrin.h...
[411/2644] Copying clang's x86intrin.h...
[412/2644] Copying clang's wasm_simd128.h...
[413/2644] Copying clang's wbnoinvdintrin.h...
[414/2644] Copying clang's wmmintrin.h...
[415/2644] Copying clang's x86gprintrin.h...
[416/2644] Copying clang's xmmintrin.h...
[417/2644] Copying clang's waitpkgintrin.h...
[418/2644] Copying clang's xsavecintrin.h...
[419/2644] Copying clang's xsavesintrin.h...
[420/2644] Copying clang's xsaveintrin.h...
[421/2644] Copying clang's xtestintrin.h...
[422/2644] Copying clang's xsaveoptintrin.h...
[423/2644] Building CXX object tools/clang/lib/Support/CMakeFiles/obj.clangSupport.dir/RISCVVIntrinsicUtils.cpp.o
[424/2644] Copying clang's xopintrin.h...
[425/2644] Copying clang's __stddef_unreachable.h...
[426/2644] Copying clang's __stddef_wchar_t.h...
[427/2644] Copying clang's __stddef_wint_t.h...
[428/2644] Copying clang's __stdarg___va_copy.h...
[429/2644] Copying clang's __stdarg_va_arg.h...
[430/2644] Copying clang's __stddef_size_t.h...
[431/2644] Copying clang's __stdarg___gnuc_va_list.h...
[432/2644] Copying clang's __stdarg_va_copy.h...
[433/2644] Copying clang's __stdarg_va_list.h...
[434/2644] Copying clang's __stddef_nullptr_t.h...
[435/2644] Copying clang's __stddef_max_align_t.h...
[436/2644] Copying clang's __stddef_null.h...
[437/2644] Copying clang's __stddef_ptrdiff_t.h...
[438/2644] Copying clang's __stddef_offsetof.h...
[439/2644] Copying clang's __stddef_rsize_t.h...
[440/2644] Copying clang's float.h...
[441/2644] Copying clang's hlsl/hlsl_basic_types.h...
[442/2644] Copying clang's hlsl/hlsl_intrinsics.h...
[443/2644] Copying clang's inttypes.h...
[444/2644] Copying clang's limits.h...
[445/2644] Copying clang's iso646.h...
[446/2644] Copying clang's llvm_libc_wrappers/ctype.h...
[447/2644] Copying clang's llvm_libc_wrappers/inttypes.h...
[448/2644] Copying clang's llvm_libc_wrappers/stdio.h...
[449/2644] Copying clang's llvm_libc_wrappers/stdlib.h...
[450/2644] Copying clang's llvm_libc_wrappers/string.h...
[451/2644] Copying clang's openmp_wrappers/__clang_openmp_device_functions.h...
[452/2644] Copying clang's llvm_libc_wrappers/time.h...
[453/2644] Copying clang's module.modulemap...
[454/2644] Copying clang's opencl-c-base.h...
[455/2644] Copying clang's openmp_wrappers/cmath...
[456/2644] Copying clang's openmp_wrappers/complex...
[457/2644] Copying clang's openmp_wrappers/complex.h...
[458/2644] Copying clang's openmp_wrappers/complex_cmath.h...
[459/2644] Copying clang's openmp_wrappers/new...
[460/2644] Copying clang's stdalign.h...
[461/2644] Copying clang's stdarg.h...
[462/2644] Copying clang's stdatomic.h...
[463/2644] Copying clang's stdbool.h...
[464/2644] Copying clang's stdckdint.h...
[465/2644] Copying clang's stddef.h...
[466/2644] Copying clang's stdint.h...
[467/2644] Copying clang's stdnoreturn.h...
[468/2644] Copying clang's tgmath.h...
[469/2644] Copying clang's vadefs.h...
[470/2644] Copying clang's unwind.h...
[471/2644] Copying clang's varargs.h...
[472/2644] Building CXX object lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o
FAILED: lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++ -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -I/tmp/llvm-project-build-stage1/lib/Support -I/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support -I/tmp/llvm-project-build-stage1/include -I/var/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fno-semantic-interposition -fvisibility-inlines-hidden -Werror=date-time -fno-lifetime-dse -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-nonnull -Wno-class-memaccess -Wno-redundant-move -Wno-pessimizing-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -Wno-misleading-indentation -Wctad-maybe-unsupported -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG -std=c++17  -fno-exceptions -funwind-tables -fno-rtti -MD -MT lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o -MF lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o.d -o lib/Support/CMakeFiles/LLVMSupport.dir/StringRef.cpp.o -c /var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp: In function ‘llvm::StringRef::size_type vectorized_find_last_of_specialized(const char*, size_t, char, char)’:
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:280:35: error: ‘Chars’ was not declared in this scope
  280 |   __m128i Needle0 = _mm_set1_epi8(Chars[0]);
      |                                   ^~~~~
/var/llvm-compile-time-tracker/llvm-project/llvm/lib/Support/StringRef.cpp:291:10: error: ‘npos’ was not declared in this scope
  291 |   return npos;
      |          ^~~~
ninja: build stopped: subcommand failed.


STDERR:
Command exited with non-zero status 1
1.53user 0.67system 0:00.46elapsed 472%CPU (0avgtext+0avgdata 134264maxresident)k
0inputs+61888outputs (96major+331124minor)pagefaults 0swaps
